--- a/src/app/products/products-list.component.html
+++ b/src/app/products/products-list.component.html
@@ -1,6 +1,6 @@
 <div class='panel panel-primary'>
   <div class='panel-heading'>
-    {{pageTitle}}
+    <h3>{{pageTitle}}</h3>
   </div>
   <div class='panel-body'>
     <div class='row'>
@@ -42,7 +42,11 @@
                     [style.margin.px]='imageMargin'
               >
             </td>
-            <td>{{product.productName}}</td>
+            <td>
+              <a [routerLink]="['/products', product.productId]">
+                {{product.productName}}
+              </a>
+            </td>
             <td>{{product.productCode | lowercase | convertToSpaces:'-'}}</td>
             <td>{{product.releaseDate}}</td>
             <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
